[project]
name = "gribscan-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dask==2024.12.1",
    "ecmwfspec",
    "gribscan",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.5",
    "matplotlib>=3.10.1",
    "rich>=13.9.4",
    "scipy>=1.15.2",
    "zarr>=2.18.3",
]

[tool.uv.sources]
gribscan = { git = "https://github.com/leifdenby/gribscan", rev = "harmonie-rotated-and-lambert-grids" }
ecmwfspec = { git = "https://github.com/observingClouds/ecmwfspec" }
